# app

WhatsAppBulkSender/: README.md  admin_routes.py  app.py  auth.py  config.py  design_guidelines.md  firebase_utils.py  message_routes.py  pyproject.toml  report_routes.py  seed_data.py  user_routes.py  webhook_routes.py  whatsapp_adapter.py  worker.py
WhatsAppBulkSender/attached_assets/: Pasted-You-are-an-experienced-full-stack-software-engineer-Build-a-PHP-based-WhatsApp-bulk-messaging-syste-1763466409586_1763466409587.txt
WhatsAppBulkSender/static/: sample_recipients.csv
WhatsAppBulkSender/static/js/: businesses.js  history.js  send-message.js  tasks.js  user-dashboard.js  users.js
WhatsAppBulkSender/templates/: base.html  login.html
WhatsAppBulkSender/templates/admin/: businesses.html  dashboard.html  tasks.html  users.html
WhatsAppBulkSender/templates/user/: dashboard.html  history.html  send_message.html
